# ScatterProgram

./: '  .gitignore  1.sh  CMakeLists.txt  README.md  UPDATE  VERSION  arg_parser.cpp  arg_parser.hpp  main.cpp  prepfef.cpp  run.hpp  run_preparedat.cpp  run_simulation.cpp  run_surface.cpp  runmode.hpp  scatter.cpp  scatter.hpp  scatter_var.cpp  scatter_var.hpp  t for bool, add bcast_var() for rem  test.in
aux/: MPIer.hpp  debugtools.hpp  enumspace.hpp  fermi.hpp  ioer.hpp  json_toolkit.hpp  lorentian.hpp  matrixop.hpp  mpier.hpp  randomer.hpp  string_mode_conversion.hpp  test.cpp  timer.hpp  type_traiter.hpp  types.hpp  vector.hpp
aux/ioer/: ioer.hpp  ioer_base_t.cpp  ioer_base_t.hpp  ioer_exceptions.hpp  ioer_t.hpp
cmake/: macros.cmake
config/: CMakeLists.txt  remlist.cfg
examples/cross/: cross.in  sub.sh
examples/newns/: newns.in  sub.sh
exceptions/: scatter_exceptions.hpp
grid/: CMakeLists.txt  fef.cpp  fef.hpp  grid.hpp  grid_t.cpp  grid_t.hpp  grid_var.cpp  grid_var.hpp
include/: MPIer.hpp  aux.hpp  debugtools.hpp  enumspace.hpp  fermi.hpp  generatehpp  grid.hpp  io.hpp  ioer.hpp  json_toolkit.hpp  lorentian.hpp  matrixop.hpp  mpier.hpp  randomer.hpp  rem.hpp  run.hpp  scatter_basic.hpp  scatter_core.hpp  scatter_exceptions.hpp  scatter_types.hpp  simulation.hpp  string_mode_conversion.hpp  surfaces.hpp  timer.hpp  type_traiter.hpp  types.hpp  vars.hpp  vector.hpp
io/: CMakeLists.txt  fileio.cpp  fileio.hpp  io.hpp  io_var.cpp  io_var.hpp  parser.cpp  parser.hpp  qctojson  test.in  test.in.json
io/IOer/: CMakeLists.txt  io_base_t.hpp  ioer.hpp  ioer_input_util.hpp  ioer_macros.hpp  ioer_output_util.hpp  ioer_var.cpp  ioer_var.hpp  type_traiter.hpp
io/filemgr/: CMakeLists.txt  filemgr.cpp  filemgr.hpp
io/iomgr/: 1.cpp  12.csa  3  ioer_base_t.hpp  ioer_functors.hpp  iomgr.cpp  iomgr.hpp
io/qcread/: parser.cpp  qctojson  remlist.cfg  test.in  try_input.json
rem/: CMakeLists.txt  Parameter.cpp~  rem.cpp  rem.hpp  rem_var.cpp  rem_var.hpp
run/: CMakeLists.txt  anal.cpp  anal.hpp  analmode.hpp  run_helpers.cpp  run_helpers.hpp  run_simulation.cpp  run_simulation.hpp  run_surface.cpp  run_surface.hpp  run_var.cpp  run_var.hpp  runmode.hpp
run/MPIexe/: .run_preparedat.cpp.swp  1  CMakeLists.txt  MPI_helper.hpp  run_preparedat.cpp  run_simulation.cpp
run/nonMPIexe/: CMakeLists.txt  run_prepareinit.cpp  run_simulation.cpp  run_surface.cpp  run_test.cpp
script/: .checkhop.py.swp  CMakeLists.txt  adhoc.py  adhoc_vib_dist.py  checkdyn  checkdyn.py  checkfefdat  checkfefdat.py  checkfinal.py  checkhop.py  checkinit  checkinit.py  checksurf  checksurf.py  main  scatter_exe  scatter_exe.sh  scatter_gen_cmd.py
script/aux/: CMakeLists.txt  ScatterConfig.py  ScatterJson.py  ScatterPath.py  __init__.py  aux_file.py  dyndat.py  fefdat.py  hopdat.py  initdat.py  qctojson.py
simulation/: CMakeLists.txt  anal.cpp  anal.hpp  analmode.hpp  dynamic_algorithms.hpp  evolve.cpp  evolve.hpp  hop_t.hpp  initmode.hpp  initstate.cpp  initstate.hpp  initstate_t.cpp  initstate_t.hpp  particle_t.hpp  simulation.hpp  simulation_var.cpp  simulation_var.hpp
simulation/dynamic_algorithms/: .CME.cpp.swp  .dynamic_algorithms.hpp.swp  CME.cpp  CME.hpp  CMakeLists.txt  EF.cpp  EF.hpp  dynamic_algorithms.cpp  dynamic_algorithms.hpp  dynamic_mode.hpp  dynamics_mode.hpp  evolve.cpp  evolve.hpp
surfaces/: CMakeLists.txt  fef.cpp  packages.hpp  single_surf.hpp  surf_t.cpp  surf_t.hpp  surfaces.hpp  surfaces_collection.hpp  surfaces_t.cpp  surfaces_t.hpp  surfaces_var.cpp  surfaces_var.hpp  types.hpp
surfaces/surfaces_collection/: API.hpp  basesurf.hpp  constant.hpp  fermi.hpp  gaussian.hpp  harmonic.hpp  morse.hpp  newns.hpp  single_surface_t.hpp  step.hpp  surfmode.hpp
test/: .showdat.py.swp  .test.init  .test1D.init  .test1d.init  .test2d.init  showdat.py  test.in  test.in.json  test1d.in  test1d.in.json  test2d.in  test2d.in.json
test/cross/: batch  cross.in  cross.in.json  getinit  sub.sh  subanal.sh
test/cross/G005/: cross_G005.in  cross_G005.in.json  sub.sh
test/cross/G01/: cross_G01.in  cross_G01.in.json  sub.sh  subanal.sh
test/cross/G02/: cross_G02.in  cross_G02.in.json  sub.sh
test/cross/G03/: cross_G03.in  cross_G03.in.json  sub.sh  subanal.sh
test/cross/G04/: cross_G04.in  sub.sh
test/cross/G05/: cross_G05.in  cross_G05.in.json  sub.sh  subanal.sh
test/cross/G06/: cross_G06.in  sub.sh
test/cross/G07/: cross_G07.in  sub.sh
test/cross/G08/: cross_G08.in  cross_G08.in.json  sub.sh  subanal.sh
test/cross/G09/: cross_G09.in  sub.sh
test/cross/G1/: cross_G1.in  sub.sh
test/easy/: easy.in  easy.in.json  sub.sh
test/newns/: batch  getinit  newns.in  newns.in.json
test/newns/G01/: newns_G01.in  newns_G01.in.json  sub.sh  subanal.sh
test/newns/G03/: newns_G03.in  newns_G03.in.json  sub.sh  subanal.sh
test/newns/G05/: newns_G05.in  newns_G05.in.json  sub.sh  subanal.sh
test/newns/G08/: newns_G08.in  newns_G08.in.json  sub.sh  subanal.sh
test/newns_model/: .newns_model.init  1.py  batch  checkdat.py  checkdyn.py  checksurf.py  newns_model.in  newns_model.in.json  sub.sh
test/newns_model/aux/: ScatterPath.py  types.py
test/nontrap/: batch  nontrap.in.json  sub.sh  sub_surfinit.sh
test/nontrap/G01/: nontrap.in  nontrap.in.json  sub.sh
test/nontrap/G03/: nontrap.in  nontrap.in.json  sub.sh
test/nontrap/G05/: nontrap.in  nontrap.in.json  sub.sh
test/nontrap/G08/: nontrap.in  nontrap.in.json
test/test_surfaces/: test_surfaces_1d.in  test_surfaces_1d.py
test/wenjie_1D_model/: .wenjie1D.init  checkinit.py  checksurf.py  sub.sh  wenjie1D.in  wenjie1D.in.json
test/wenjie_1D_model/aux/: ScatterPath.py  __init__.py
