CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

SET(OBJNAME io)
FILE(GLOB ${OBJNAME}_HDR *.hpp)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})

TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/aux)
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/rem)
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/simulation)
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/surfaces)
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/grid)

ADD_SUBDIRECTORY(filemgr)
TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC filemgr)
