CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

SET(OBJNAME io)
FILE(GLOB ${OBJNAME}_HDR *.hpp)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})

# Boost
FIND_PACKAGE(Boost 1.61.0 REQUIRED PATHS ${HOME}/lib/boost NO_DEFAULT_PATH)
MESSAGE(STATUS "Boost version: ${Boost_VERSION}" )
MESSAGE(STATUS "Boost include dirs: ${Boost_INCLUDE_DIRS}" )
MESSAGE(STATUS "Boost library dirs: ${Boost_LIBRARY_DIRS}" )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(filemgr)
TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC filemgr boost_program_options boost_filesystem)
