CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

ADD_SUBDIRECTORY(IOer)

SET(OBJNAME io)
FILE(GLOB ${OBJNAME}_HDR *.hpp)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC ioer Boost::program_options Boost::filesystem)
