CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

SET(OBJNAME run)
FILE(GLOB ${OBJNAME}_HDR *.hpp)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})

TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
SET(LIBS rem surfaces grid simulation io)
TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC ${LIBS})

ADD_SUBDIRECTORY(nonMPIexe)
ADD_SUBDIRECTORY(MPIexe)
