CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

SET(OBJNAME surfaces)
FILE(GLOB ${OBJNAME}_HDR *.hpp)
FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})

TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PRIVATE ${CMAKE_SOURCE_DIR}/aux)
TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PRIVATE ${CMAKE_SOURCE_DIR}/rem)
