# basic info
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

# use MPI compiler
SET(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
SET(CMAKE_CXX_COMPILE_FLAGS ${MPI_CXX_FLAGS})
SET(CMAKE_CXX_LINK_FLAGS ${MPI_LINK_FLAGS})

# executables
FILE(GLOB SRCS *.cpp)
SET(LIBS rem surfaces grid simulation io run)

FOREACH(SRC ${SRCS})
	GET_FILENAME_COMPONENT(OBJNAME ${SRC} NAME_WE)
	ADD_EXECUTABLE(${OBJNAME} ${SRC})
	TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC ${LIBS})
	TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
ENDFOREACH()
