# basic info
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

# use native compiler
SET(CMAKE_CXX_COMPILER ${NATIVE_CXX_COMPILER})
SET(CMAKE_CXX_COMPILE_FLAGS ${NATIVE_CXX_FLAGS})
SET(CMAKE_CXX_LINK_FLAGS ${NATIVE_LINK_FLAGS})

# executables
FILE(GLOB SRCS *.cpp)
#SET(LIBS rem surfaces grid simulation io run)
SET(LIBS run)

FOREACH(SRC ${SRCS})
	GET_FILENAME_COMPONENT(OBJNAME ${SRC} NAME_WE)
	ADD_EXECUTABLE(${OBJNAME} ${SRC})
	TARGET_LINK_LIBRARIES(${OBJNAME} PUBLIC ${LIBS})
	TARGET_INCLUDE_DIRECTORIES(${OBJNAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
	
	INSTALL(TARGETS ${OBJNAME} RUNTIME DESTINATION bin)
ENDFOREACH()
